# MemCP

./: .env.example  .gitignore  MCP_Diagram.md  Plan.MD  README.md  TODO.md  pyproject.toml
docs/: index.html
memcp/: cli.py  config.py  engine.py  models.py  server.py  storage.py
